k8s/istio-route/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-demo-7
  labels:
    app: go-demo-7
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: go-demo-7
